Sonar issues fixed.